rdb-sql/test/rdb/compile_fail/insert_sans_cols.cpp
#include "test_fail.hpp"

void test() {
  check_incomplete(insert_into(p));
}

